--- a/dashboard.html
+++ b/dashboard.html
@@ -627,7 +627,7 @@
                         <i class="fas fa-user-circle profile-avatar"></i>
                         <div class="dropdown-menu">
                             <a href="#profile" class="nav-item">Profile</a>
-                            <a href="index1.html">Log Out</a>
+                            <a href="index.html">Log Out</a>
                         </div>
                     </div>
                 </div>
