--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
         .container {
             width: 100%;
+            max-width: 1200px; /* Added max-width for better control on large screens */
         }
 
         nav {
@@ -48,6 +49,7 @@
             text-align: center;
             background: linear-gradient(180deg, #d4edda 0%, #ffffff 100%);
             width: 100%;
+            box-sizing: border-box; /* Added for consistent padding */
         }
 
         .main-content h1 {
@@ -68,6 +70,7 @@
             justify-content: center;
             gap: 20px;
             margin-top: 40px;
+            flex-wrap: wrap; /* Added for responsiveness */
         }
 
         .cta-buttons a,
@@ -84,6 +87,7 @@
             text-decoration: none;
             display: inline-block;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            white-space: nowrap; /* Prevent text wrapping inside button */
         }
 
         .cta-buttons a:hover,
@@ -98,6 +102,7 @@
             width: 100%;
             padding: 60px 20px;
             text-align: center;
+            box-sizing: border-box; /* Added for consistent padding */
         }
 
         .features h2 {
@@ -108,10 +113,11 @@
 
         .feature-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); /* Adjusted minmax for smaller screens */
             gap: 30px;
             max-width: 1000px;
             margin: 0 auto;
+            padding: 0 10px; /* Added padding for smaller screens */
         }
 
         .feature-item {
@@ -146,6 +152,7 @@
             text-align: center;
             padding: 20px 0;
             margin-top: 50px;
+            box-sizing: border-box; /* Added for consistent padding */
         }
         
         /* Modal Styles */
@@ -160,6 +167,8 @@
             background-color: rgba(0, 0, 0, 0.5);
             justify-content: center;
             align-items: center;
+            padding: 20px; /* Added padding for small screens */
+            box-sizing: border-box; /* Added for consistent padding */
         }
 
         .modal-content {
@@ -167,7 +176,8 @@
             padding: 30px;
             border-radius: 8px;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
-            width: 350px;
+            width: 90%; /* Adjusted width for responsiveness */
+            max-width: 380px; /* Added max-width */
             text-align: center;
             position: relative;
         }
@@ -215,6 +225,91 @@
 
         .submit-btn:hover {
             background-color: #388e3c;
+        }
+
+        /* Media Queries for smaller screens */
+        @media (max-width: 768px) {
+            nav {
+                padding: 15px 20px; /* Adjusted padding for smaller screens */
+            }
+
+            .main-content h1 {
+                font-size: 2.5em; /* Smaller font size for mobile */
+            }
+
+            .main-content p {
+                font-size: 1.2em; /* Smaller font size for mobile */
+            }
+
+            .cta-buttons {
+                flex-direction: column; /* Stack buttons vertically on small screens */
+                gap: 15px; /* Adjusted gap */
+            }
+
+            .cta-buttons a,
+            .cta-buttons button {
+                width: 80%; /* Make buttons wider on small screens */
+                margin: 0 auto; /* Center buttons */
+                padding: 14px 25px; /* Adjusted padding */
+                font-size: 1.1em; /* Smaller font size */
+            }
+
+            .features h2 {
+                font-size: 2em; /* Smaller font size for mobile */
+                margin-bottom: 30px; /* Adjusted margin */
+            }
+
+            .feature-item {
+                padding: 30px; /* Adjusted padding */
+            }
+
+            .feature-item i {
+                font-size: 2.5em; /* Smaller icon size */
+            }
+
+            .feature-item h3 {
+                font-size: 1.3em; /* Smaller font size */
+            }
+        }
+
+        @media (max-width: 480px) {
+            .main-content h1 {
+                font-size: 2em;
+            }
+
+            .main-content p {
+                font-size: 1em;
+            }
+
+            .cta-buttons a,
+            .cta-buttons button {
+                width: 90%; /* Even wider buttons on very small screens */
+                font-size: 1em;
+            }
+
+            .features {
+                padding: 40px 15px; /* Adjusted padding */
+            }
+
+            .features h2 {
+                font-size: 1.8em;
+            }
+
+            .feature-item {
+                padding: 25px;
+            }
+
+            .feature-item i {
+                font-size: 2em;
+            }
+
+            .feature-item h3 {
+                font-size: 1.2em;
+            }
+
+            .modal-content {
+                padding: 20px; /* Smaller padding for modal on very small screens */
+            }
         }
     </style>
 </head>
